--- a/hard.html
+++ b/hard.html
@@ -34,7 +34,7 @@
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" id="closebtn">&times;</a>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="soft.html">Soft Drinks</a></li>
                 <li><a href="hard.html">Hard Drinks</a></li>
                 <li><a href="signup.html">Signup</a></li>
