--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,7 @@
                     <div id="mySidenav" class="sidenav">
                               <a href="javascript:void(0)" class="closebtn" id="closebtn">&times;</a>
                               <ul>
-                                        <li><a href="home.html">Home</a></li>
+                                        <li><a href="index.html">Home</a></li>
                                         <li><a href="soft.html">Soft drinks</a></li>
                                         <li><a href="hard.html">Hard drinks</a></li>
                                         <li><a href="signup.html">Signup</a></li>
